[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.6",
    "flask>=3.1.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "python-binance>=1.0.29",
    "requests>=2.32.5",
    "websocket-client>=1.8.0",
]
